# Claude-Code-Usage-Analytics-Platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.streamlit/: config.toml
docs/: 01_requirements_analysis.md  02_architecture.md  insights_and_findings.md  llm_usage_log.txt
src/: config.py
src/analytics/: __init__.py  queries.py
src/dashboard/: app.py
src/dashboard/components/: charts.py  filters.py  metrics.py
src/dashboard/pages/: advanced_insights.py  cost_analysis.py  error_analysis.py  overview.py  team_insights.py  tool_usage.py
src/database/: __init__.py  connection.py  schema.py
src/ingestion/: __init__.py  loader.py  parser.py  pipeline.py  validators.py
tests/: test_analytics.py  test_loader.py  test_parser.py  test_validators.py
