[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-analytics"
version = "0.1.0"
description = "Analytics platform for Claude Code telemetry data"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
